# Encryptodon is an e2ee library with various applications.

# Copyright (C) 2024 sean watters

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
authors = ["sean watters <sean@watters.io>"]
description = "Pachyderm Goes Private 🐘🕶️"
edition = "2021"
homepage = "https://github.com/seanwatters/encryptodon"
license = "AGPL-3.0"
name = "encryptodon"
readme = "README.md"
repository = "https://github.com/seanwatters/encryptodon"
version = "0.1.7"

[dependencies]
wasm-bindgen = "0.2.87"

aes = "0.8.3"
base64 = "0.21.2"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
x25519-dalek = { version =  "2.0.0", features = ["static_secrets"] }

[lib]
crate-type = ["cdylib", "rlib"]
